--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.c0dethink</groupId>
+<!--    project name   -->
     <artifactId>studyJava</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
